add notice and alert in layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,14 @@
       </li>
       <% end %>
 
+
+
+<p style="color: green"><%= notice %>
+
+<p style="color: red"><%= alert %>
+
+
+
     </ul>
     <%= yield %>
   </body>
