--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
       <li>
         <a href="/user_sign_out">Sign out</a>
       </li>
+      <li>
+        <a href="/bookmarks">Bookmarks</a>
+      </li>
       <% end %>
 
 
