only display bookmarks of the user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,10 @@
       </li>
       <% else %>
       <li>
-        <a href="/user_sign_out">Sign out</a>
+        <a href="/bookmarks">My Bookmarks</a>
       </li>
       <li>
-        <a href="/bookmarks">Bookmarks</a>
+        <a href="/user_sign_out">Sign out</a>
       </li>
       <% end %>
 
