--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -16,9 +16,6 @@
 
     <form action="/insert_bookmark" method="post">
       <div>
-        <label for="user_id_box">
-          User
-        </label>
 
         <%#input type="text" id="user_id_box" name="query_user_id">%>
       
@@ -33,16 +30,8 @@
 
       </div>
 
-      <div>
-        <label for="movie_id_box">
-          Movie
-        </label>
-
-        <input type="text" id="movie_id_box" name="query_movie_id">
-      </div>
-
       <button>
-        Create bookmark
+        Bookmark this movie!
       </button>
     </form>
   </div>
